<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:weightSum="3"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Timer, current score and high score -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/tv_time"
        android:text="@string/time_text"
        android:textStyle="bold"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/tv_score"
        android:text="@string/score_text"
        android:textStyle="bold"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/tv_best"
        android:text="@string/best_text"
        android:textStyle="bold"
        android:textColor="#fff"/>

</LinearLayout>